packages/fuselage/src/components/Modal/styles.scss
@use '../../styles/colors.scss';
@use '../../styles/lengths.scss';
@use '../../styles/typography.scss';

.rcx-modal {
  position: static;

  width: lengths.size(full);
  max-height: lengths.size(full);
  margin: auto;

  background: none;

  &__inner {
    min-width: lengths.size(none);
  }

  &__title {
    @include typography.use-text-ellipsis;
    white-space: nowrap;
  }

  &__backdrop {
    position: fixed;
    inset: lengths.inset(0);

    background-color: colors.neutral(500, $alpha: 0.5);
  }

  @include on-breakpoint(sm) {
    max-width: lengths.size(640);
    padding: lengths.padding(16);
  }
}

